--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+android/app/google-services.json
+macos/Runner/GoogleService-Info.plist
+ios/Runner/GoogleService-Info.plist
+lib/firebase_options.dart
