--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  
+  #Core
+  flutter_riverpod: ^2.3.6
+  kartal: ^3.0.1
+  equatable: ^2.0.5
+
+  #Firebase
+  cloud_firestore: ^4.8.2
+  firebase_core: ^2.14.0
+
+  #Utility
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  very_good_analysis: ^5.0.0+1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -59,9 +73,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icon/
+    - assets/image/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
