--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   #Firebase
   cloud_firestore: ^4.8.2
   firebase_core: ^2.14.0
+  firebase_auth: ^4.6.3
+  firebase_ui_auth: ^1.5.0
+  
+  #Caching
+  shared_preferences: ^2.2.0
 
   #Utility
   animated_text_kit: ^4.2.2
