--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,12 +48,14 @@ dependencies:
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
   firebase_ui_auth: ^1.5.0
+  firebase_storage: ^11.2.5
   
   #Caching
   shared_preferences: ^2.2.0
 
   #Utility
   animated_text_kit: ^4.2.2
+  image_picker: ^1.0.1
 
 dev_dependencies:
   flutter_test:
